# debug-mcp

./: .env.example  .gitignore  README.md  pyproject.toml
cases/: debug_cases.json
src/: __init__.py  agent.py  cli.py  code_metrics.py  config.py  config_checker.py  dependency_checker.py  http_analyzer.py  local_db.py  log_analyzer.py  logger.py  memory.py  patch_generator.py  performance.py  security.py  server.py  stack_parser.py  test_runner.py  tools.py
