[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "debug-mcp"
version = "0.1.0"
description = "智能调试 Agent MCP Server - 自动排查问题并记住错误"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "K", email = "your@email.com"}
]
keywords = ["mcp", "debug", "agent", "ai", "debugging"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
deepseek = []
openai = []
anthropic = []

[project.scripts]
debug-mcp = "src.cli:main"
debug-mcp-server = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]
